SAK-44847 Message Forums dark mode: fixed hardcoded background color (#8923)
(cherry picked from commit 898e17808a47c7bd7cceef2ce4eb8ab50faa7c4a)

--- a/msgcntr/messageforums-app/src/webapp/css/msgcntr.css
+++ b/msgcntr/messageforums-app/src/webapp/css/msgcntr.css
@@ -2,7 +2,7 @@
 .forumHeader{
 	/*panel holding all forum metadata in forum list view*/
 	width: 100%;
-    background: #F8F8F3;
+    background: var(--sakai-background-color-2);
     border: 1px solid #D9C9A7;
     margin-bottom: 0;
     margin-top: 1em;
@@ -78,7 +78,7 @@
 	color: #000;
 	font: .84em/1em verdana, arial,sans-serif;
 	background: #fe9;
-	outline:1px solid #fff; 
+	outline:1px solid var(--sakai-border-color);
 	padding: 1px 2px;
 	margin-right: 5px;
 	/*	display:none; - uncomment to hide the "new" message */
@@ -116,13 +116,13 @@
 	padding:2px;
 }
 .jumpToNew a {
-	border:1px solid #ccc;
+	border:1px solid var(--sakai-border-color);
 	padding:3px;
 	padding-left:18px;
 	background: #eee url(../images/silk/arrow_down.png) center left no-repeat;
 }
 .markAllAsRead {
-	border:1px solid #ccc;
+	border:1px solid var(--sakai-border-color);
 	padding:3px;
 	padding-left:30px;
 	background: #eee url(../images/markAsRead.gif)  5px center no-repeat;
@@ -136,7 +136,7 @@
 	background: #bf9;
 	font: .84em/1em verdana, arial,sans-serif;
 	color: #000;
-	outline:1px solid #fff; 
+	outline:1px solid var(--sakai-border-color);
 	padding: 1px 2px;
 	margin-right: 5px;
 }
@@ -144,7 +144,7 @@
 	color: #000;
 	font: .84em/1em verdana, arial,sans-serif;
 	background: #f9a;
-	outline:1px solid #fff; 	
+	outline:1px solid var(--sakai-border-color);
 	padding: 1px 2px;
 	margin-right: 5px;
 }
@@ -195,7 +195,7 @@
 }
 .titleBarBorder{
 	/*create an underline under message title + metadata in view body thread view*/
-	background: #fff;
+	background: var(--sakai-background-color-1);
 	margin: 2px 0 0 0;
 }
 .messagesThreaded tbody tr.hierItemBlock td.bogus:first-child{
@@ -210,7 +210,7 @@
 .messagesFlat tbody .title,.messagesThreaded tbody .title{
 	font-weight: bold;
 	font-size: 1.1em;
-}	
+}
 
 .allMessages .messageTitle .firstChild{
 	/*first post in a thread in topic listing (no body)*/
@@ -227,14 +227,14 @@
 }
 .pendingApproval{
 	/*listing of a message pending aproval*/
-	border-left: 2px solid #ccc;
+	border-left: 2px solid var(--sakai-border-color);
 	margin: 0;
 }
 /*PART 3 - SINGLE MESSAGE DISPLAY*/
 .singleMessage{
 	/*title + metadata block of a single message display*/
 	border-left: 2px solid #69d;
-	background:#f9f9f9;
+	background: var(--sakai-background-color-2);
 	margin-top: 1em;
 	padding:.3em  .5em;
 }
@@ -244,8 +244,8 @@
 }
 .singleMessageReply{
 	/*title + metadata block of a single message display*/
-	border:1px solid #ccc;
-	background:#ffe;
+	border:1px solid var(--sakai-border-color);
+	background:--var(sakai-color-gold--lighter-7);
 	margin-top: 1em;
 	padding:.3em  .5em;
 }
@@ -262,8 +262,8 @@ table.messageActions td{
 .messageActions a{
 	/*single message action links*/
 	text-decoration: none !important;
-	border: 1px solid #ccc !important;
-	background: #fff;
+	border: 1px solid var(--sakai-border-color) !important;
+	background: var(--sakai-background-color-1);
 	padding: 2px 5px;
 	vertical-align: middle;
 	margin: 0 .3em .3em 0;
@@ -277,9 +277,9 @@ table.messageActions td{
 	text-decoration: none !important;
 }
 #permalinkHolder{
-	border:1px solid #ccc;
+	border:1px solid var(--sakai-border-color);
 	display:none;
-	background:#ffe;
+	background:--var(sakai-color-gold--lighter-7);
 	position:absolute;
 	padding:5px;
 	z-index: 1;
@@ -349,21 +349,21 @@ td div.title{
 }
 .selChanged{
 	/*flag an item as changed in organize view*/
-	border: 1px solid #aaa;
+	border: 1px solid var(--sakai-border-color);
 	background-color: #fc6;
 }
 .attachPanel{
 /*panel listing attachmetns when in edit mode for forum/topic/message*/
-	border: 1px solid #eee;
-	background: #fff;
+	border: 1px solid var(--sakai-border-color);
+	background: var(--sakai-background-color-1);
 	font-size: 1em;
 }
 .attachPanel tr:hover{
 	background: none !important;
 }
 .attachPanel th{
-	background: #ffe;
-	border-bottom: 1px solid #eee;
+	background: --var(sakai-color-gold--lighter-7);
+	border-bottom: 1px solid var(--sakai-border-color);
 	text-align: left;
 	font-weight: normal;
 	padding: .2em .5em;
@@ -376,7 +376,7 @@ td div.title{
 	width: 1em;
 }
 .permissionTable {
-	width: 675px;	
+	width: 675px;
 }
 .permissionRoleLabel {
 	display:inline-block;
@@ -398,7 +398,7 @@ td div.title{
 }
 
 .permissionRadioGroup {
-	border: 1px solid #aaa;
+	border: 1px solid var(--sakai-border-color);
 	display:block;
 	padding:.3em;
 }
@@ -407,7 +407,7 @@ td div.title{
 .permissionRow .ui-icon { width: 16px; height: 16px; background-image: url(ui-lightness/images/ui-icons_222222_256x240.png); }
 .permissionRow .ui-icon-triangle-1-s { background-position: -64px -16px; }
 .permissionRow .ui-icon-triangle-1-e { background-position: -32px -16px; }
-.permissionRow .ui-accordion-content { background: #eee; border: 1px solid #ccc; }
+.permissionRow .ui-accordion-content { background: #eee; border: 1px solid var(--sakai-border-color); }
 .permissionRow span.ui-accordion-header {
 	margin: 0 0 0.5em 4em;
 	display:inline-block;
@@ -432,7 +432,7 @@ table.discTria img {
 }
 table.discTria:hover{
 	cursor: pointer;
-	border:1px solid #aaa
+	border:1px solid var(--sakai-border-color)
 }
 .discTria{
 	background: transparent;
@@ -448,12 +448,6 @@ table.discTria:hover{
 	font-family: Georgia,"Times New Roman",Times,serif;
 	line-height:1.5em;
 }
-.printTable td{
-}
-
-.printBlock .textPanel a{
-		
-}
 .printBlock .textPanel  a:after{
 	content: " (" attr(href) ")";
 }
@@ -463,10 +457,10 @@ table.discTria:hover{
 	font-weight: bold;
 }
 .printBlock .bordered{
-	border-color: #ccc;
+	border-color: var(--sakai-border-color);
 }
 .printBlock .messagePending{
-	background: #ccc;
+	background: var(--sakai-border-color);
 	color: #000;
 	padding: 2px;
 	margin-right: 5px;
@@ -489,7 +483,7 @@ a .textPanelFooter{
 
 .lastRevise{
 	margin:.3em 0;
-	padding:.3em 0;		
+	padding:.3em 0;
 }
 form{margin-bottom:0;}
 
@@ -504,11 +498,9 @@ form{margin-bottom:0;}
 	text-decoration: underline;
 	margin-bottom:3px
 }
-.messageCommentBody{
-}
 .threadMovedMsg{
     font-size:1em;
-    color:#555555; 
+    color: var(--sakai-text-color-2);
 }
 .calWidget{
     vertical-align:middle;
@@ -524,11 +516,11 @@ form{margin-bottom:0;}
 	padding-right: .25em;
 	padding-bottom: .3em;
 }
-.authorImage img{	
+.authorImage img{
 	max-width: 8em;
 	max-height: 5em;
 }
-.singleMessage .authorImage img{	
+.singleMessage .authorImage img{
 	max-width: 5em;
 	max-height: 4em;
 }
@@ -547,17 +539,14 @@ img.authorImage {
 .moreMenuLink span{
     padding-right:15px;
     background:transparent url(../images/silk/bullet_arrow_down.png) bottom right no-repeat;
-    
-}    
+
+}
 .moreMenu{
-    background:#fff;
+    background:var(--sakai-background-color-1);
     list-style:none;
     margin:0;
     padding:0px;
-    border:1px solid #ccc;
-}
-.moreMenu li{
-    
+    border:1px solid var(--sakai-border-color);
 }
 .moreMenu li a{
     display:block;
